--- a/source/ProgramacaoVisual/WebMvc/Views/Pessoas/Index.cshtml
+++ b/source/ProgramacaoVisual/WebMvc/Views/Pessoas/Index.cshtml
@@ -1,27 +1,33 @@
 @model WebMvc.Models.PessoaViewModel
-{
-    viewData["Title"] = "Error";
+@{
+    ViewData["Title"] = "Index";
 }
 
-<table border="2" >
-    <head>
+<h2>Index</h2>
+<table class="table" >
+    <thead>
         <tr>
-            <td>Id</td>
-            <td>Nome</td>
-            <td>Cargo</td>
+            <th>Id</th>
+            <th>Nome</th>
+            <th>Actions</th>
         </tr>
 
-    </head>
+    </thead>
     <body>
         @foreach (var item in Model.Items)
         {   
             <tr>
-                <td>@item.Id</td>
                 <td>@item.Nome</td> 
                 <td>@item.Cargo</td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
             </tr>    
         }
     </body>
-
-
 </table>
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
